initial blinkc implementation

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -4,6 +4,8 @@ find_package(GTest CONFIG REQUIRED)
 
 add_executable(blink_tests
     DynamicGroupImplTests.cpp
+    LexerTests.cpp
+    SchemaBuilderTests.cpp
     StaticGroupImplTests.cpp)
 
 target_link_libraries(blink_tests PRIVATE blink::blink GTest::gtest GTest::gtest_main)
