--- a/tools/blinkc/CMakeLists.txt
+++ b/tools/blinkc/CMakeLists.txt
@@ -1,5 +1,7 @@
-# find_package(GTest CONFIG REQUIRED)
+project(blinkc LANGUAGES CXX)
 
-add_executable(blinkc
-        blinkc.cpp)
+find_package(fmt CONFIG REQUIRED)
+find_package(inja CONFIG REQUIRED)
 
+add_executable(blinkc blinkc.cpp)
+target_link_libraries(blinkc PRIVATE blink::blink fmt::fmt pantor::inja)
