--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required(VERSION 3.14)
 project(blink-protocol LANGUAGES CXX)
 
 find_package(byte_order CONFIG REQUIRED)
+find_package(fmt CONFIG REQUIRED)
 
 add_library(blink)
 add_library(blink::blink ALIAS blink)
@@ -16,15 +17,24 @@ target_include_directories(blink
 
 target_sources(blink
     PRIVATE
+        include/blink/CharReader.hpp
         include/blink/DynamicGroupImpl.hpp
         src/DynamicGroupImpl.cpp
         include/blink/DynamicGroupPreamble.hpp
         src/DynamicGroupPreamble.cpp
+        include/blink/Lexer.hpp
+        src/Lexer.cpp
+        include/blink/Schema.hpp
+        src/Schema.cpp
+        include/blink/SchemaBuilder.hpp
+        src/SchemaBuilder.cpp
         include/blink/StaticGroupImpl.hpp
         src/StaticGroupImpl.cpp
+        include/blink/Token.hpp
+        src/Token.cpp
         include/blink/Util.hpp)
 
-target_link_libraries(blink PRIVATE byte_order::byte_order)
+target_link_libraries(blink PRIVATE byte_order::byte_order fmt::fmt)
 
 add_subdirectory(tools)
 add_subdirectory(tests)
