--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -13,17 +13,19 @@ target_link_libraries(blink_tests PRIVATE blink::blink GTest::gtest GTest::gtest
 # blinkc tests
 
 set(BLINKC_TESTS_GENERATED_FILE_PATH ${CMAKE_CURRENT_BINARY_DIR}/generated)
-set(BLINKC_TESTS_GENERATED_FILE_NAME ${BLINKC_TESTS_GENERATED_FILE_PATH}/BlinkMessages.hpp)
+set(BLINKC_TESTS_GENERATED_FILE_NAMES
+    ${BLINKC_TESTS_GENERATED_FILE_PATH}/BlinkMessages.hpp
+    ${BLINKC_TESTS_GENERATED_FILE_PATH}/BlinkMessages.cpp)
 
 add_custom_command(
-    OUTPUT ${BLINKC_TESTS_GENERATED_FILE_NAME}
+    OUTPUT ${BLINKC_TESTS_GENERATED_FILE_NAMES}
     COMMAND cmake -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/etc ${CMAKE_CURRENT_BINARY_DIR}/etc
     COMMAND cmake -E make_directory ${BLINKC_TESTS_GENERATED_FILE_PATH}
-    COMMAND blinkc etc/TestSchema.blink ${BLINKC_TESTS_GENERATED_FILE_NAME}
+    COMMAND blinkc etc/TestSchema.blink ${BLINKC_TESTS_GENERATED_FILE_PATH}/BlinkMessages.hpp
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
     DEPENDS blinkc ${CMAKE_CURRENT_SOURCE_DIR}/etc/TestSchema.blink)
 
-add_executable(blinkc_tests BlinkcTests.cpp ${BLINKC_TESTS_GENERATED_FILE_NAME})
+add_executable(blinkc_tests BlinkcTests.cpp ${BLINKC_TESTS_GENERATED_FILE_NAMES})
 
 target_include_directories(blinkc_tests
     PRIVATE
