--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -14,14 +14,14 @@ target_link_libraries(blink_tests PRIVATE blink::blink GTest::gtest GTest::gtest
 
 set(BLINKC_TESTS_GENERATED_FILE_PATH ${CMAKE_CURRENT_BINARY_DIR}/generated)
 set(BLINKC_TESTS_GENERATED_FILE_NAMES
-    ${BLINKC_TESTS_GENERATED_FILE_PATH}/BlinkMessages.hpp
-    ${BLINKC_TESTS_GENERATED_FILE_PATH}/BlinkMessages.cpp)
+    ${BLINKC_TESTS_GENERATED_FILE_PATH}/TestSchema.hpp
+    ${BLINKC_TESTS_GENERATED_FILE_PATH}/TestSchema.cpp)
 
 add_custom_command(
     OUTPUT ${BLINKC_TESTS_GENERATED_FILE_NAMES}
     COMMAND cmake -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/etc ${CMAKE_CURRENT_BINARY_DIR}/etc
     COMMAND cmake -E make_directory ${BLINKC_TESTS_GENERATED_FILE_PATH}
-    COMMAND blinkc etc/TestSchema.blink ${BLINKC_TESTS_GENERATED_FILE_PATH}/BlinkMessages.hpp
+    COMMAND blinkc etc/TestSchema.blink ${BLINKC_TESTS_GENERATED_FILE_PATH}/
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
     DEPENDS blinkc ${CMAKE_CURRENT_SOURCE_DIR}/etc/TestSchema.blink)
 
