--- a/tools/blinkc/CMakeLists.txt
+++ b/tools/blinkc/CMakeLists.txt
@@ -1,6 +1,7 @@
 project(blinkc LANGUAGES CXX)
 
+find_package(fmt CONFIG REQUIRED)
 find_package(inja CONFIG REQUIRED)
 
 add_executable(blinkc blinkc.cpp)
-target_link_libraries(blinkc PRIVATE blink::blink pantor::inja)
+target_link_libraries(blinkc PRIVATE blink::blink fmt::fmt pantor::inja)
