basic implementation of SequenceImpl

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,8 @@ target_sources(blink
         src/SchemaBuilder.cpp
         include/blink/StaticGroupImpl.hpp
         src/StaticGroupImpl.cpp
+        include/blink/SequenceImpl.hpp
+        src/SequenceImpl.cpp
         include/blink/Token.hpp
         src/Token.cpp
         include/blink/Util.hpp)
