--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.14)
-project(blink-protocol-example LANGUAGES CXX)
+project(blink-protocol-examples LANGUAGES CXX)
 
 string(COMPARE EQUAL "${CMAKE_SOURCE_DIR}" "${PROJECT_SOURCE_DIR}" is_top_level)
 
@@ -9,26 +9,20 @@ if(is_top_level)
     find_package(blink CONFIG REQUIRED)
 endif()
 
-set(BLINKC_EXAMPLE_GENERATED_FILE_PATH ${CMAKE_CURRENT_BINARY_DIR}/generated)
-set(BLINKC_EXAMPLE_GENERATED_FILE_NAMES
-    ${BLINKC_EXAMPLE_GENERATED_FILE_PATH}/ExampleSchema.hpp
-    ${BLINKC_EXAMPLE_GENERATED_FILE_PATH}/ExampleSchema.cpp)
+set(BLINK_EXAMPLES_GENERATED_FILE_PATH ${CMAKE_CURRENT_BINARY_DIR}/generated)
+set(BLINK_EXAMPLES_GENERATED_FILE_NAMES
+    ${BLINK_EXAMPLES_GENERATED_FILE_PATH}/ExampleSchema.hpp
+    ${BLINK_EXAMPLES_GENERATED_FILE_PATH}/ExampleSchema.cpp)
 
 add_custom_command(
-    OUTPUT ${BLINKC_EXAMPLE_GENERATED_FILE_NAMES}
+    OUTPUT ${BLINK_EXAMPLES_GENERATED_FILE_NAMES}
     COMMAND cmake -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/etc ${CMAKE_CURRENT_BINARY_DIR}/etc
-    COMMAND cmake -E make_directory ${BLINKC_EXAMPLE_GENERATED_FILE_PATH}
-    COMMAND blink::blinkc etc/ExampleSchema.blink ${BLINKC_EXAMPLE_GENERATED_FILE_PATH}/
+    COMMAND cmake -E make_directory ${BLINK_EXAMPLES_GENERATED_FILE_PATH}
+    COMMAND blink::blinkc etc/ExampleSchema.blink ${BLINK_EXAMPLES_GENERATED_FILE_PATH}/
     WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
     DEPENDS blink::blinkc ${CMAKE_CURRENT_SOURCE_DIR}/etc/ExampleSchema.blink)
 
-add_executable(example example.cpp ${BLINKC_EXAMPLE_GENERATED_FILE_NAMES})
+add_custom_target(generated_schema_files DEPENDS ${BLINK_EXAMPLES_GENERATED_FILE_NAMES})
 
-target_include_directories(example
-    PRIVATE
-        "$<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}>")
-
-target_link_libraries(example
-    PRIVATE
-        blink::blink)
-
+add_subdirectory(finance)
+add_subdirectory(transactions)
